package com.es.spaceship.sale.dto;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class RankingDTO {

    private String nick;
    private Long victories;

}
