package com.es.spaceship.sale.models.dao;

import org.springframework.data.jpa.repository.JpaRepository;

import com.es.spaceship.sale.models.entity.DefenseSystem;

public interface DefenseSystemDao extends JpaRepository<DefenseSystem, Long> {

}
