package com.es.spaceship.sale.models.dao;

import org.springframework.data.jpa.repository.JpaRepository;

import com.es.spaceship.sale.models.entity.SalesShip;

public interface SalesShipDao  extends JpaRepository<SalesShip, Long>{

}
