package com.es.spaceship.sale.models.dao;

import org.springframework.data.jpa.repository.JpaRepository;

import com.es.spaceship.sale.models.entity.Shield;

public interface ShieldDao extends JpaRepository<Shield, Long> {

}
