package com.es.spaceship.sale.util;

import java.util.List;

public class Constants {

    public class Battle {
        public static final String ACCEPTED = "ACCEPTED";
        public static final String REJECTED = "REJECTED";
        public static final String FINALIZED = "FINALIZED";

        public static final String NO_WINNER = "NO_WINNER";
    }

    public class Notification {
        public static final String LAUNCH_PROBE = "Te han lanzado una sonda, Usuario: ";
        public static final String NEW_CHALLENGE = "Te han desafiado a una batalla, Usuario: ";

    }

    public class BattlePending {
        public static final String BATTLE_NUMBER = " Batalla #";
        public static final String CHALLENGING = " Retador: ";
        public static final String SEPARATOR = " :: ";
    }
}
